--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
     "react-chartjs-2": "^5.2.0",
