--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "i18next-http-backend": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
+    "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^2.7.1",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.4",
     "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
