--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+    "@ckeditor/ckeditor5-react": "^5.1.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
@@ -14,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
     "formik": "^2.2.9",
+    "html-react-parser": "^3.0.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
@@ -25,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.0",
+    "react-html-parser": "^2.0.2",
     "react-i18next": "^12.1.4",
     "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
