--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
+    "react-refresh-webpack-plugin": "^0.1.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
